[gd_scene load_steps=12 format=2]

[ext_resource path="res://pivotal.gd" type="Script" id=1]
[ext_resource path="res://setter_and_eraser.gd" type="Script" id=2]
[ext_resource path="res://TextEdit.gd" type="Script" id=3]
[ext_resource path="res://entity.gdshader" type="Shader" id=4]
[ext_resource path="res://aethenoperes-exp.png" type="Texture" id=5]
[ext_resource path="res://ok.gd" type="Script" id=6]
[ext_resource path="res://HSlider.gd" type="Script" id=7]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 4 )
shader_param/com_txt = Vector3( 0.1, 0.1, 0.1 )
shader_param/height_scale = 0.5
shader_param/displacement = ExtResource( 5 )

[sub_resource type="PlaneMesh" id=6]
material = SubResource( 5 )
size = Vector2( 13, 5 )
subdivide_width = 12
subdivide_depth = 12

[sub_resource type="BoxShape" id=4]

[sub_resource type="AudioStreamGenerator" id=7]

[node name="Spatial" type="Spatial"]
script = ExtResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="."]
cast_shadow = 2
mesh = SubResource( 6 )
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="TextEdit" type="TextEdit" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -511.0
margin_top = -182.0
margin_right = -24.0
wrap_enabled = true
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Control"]
margin_right = 233.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="Control/Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label2" type="Label" parent="Control/Panel"]
margin_left = 84.0
margin_right = 231.0
margin_bottom = 40.0
text = "= vec3 * osc_scaling"
align = 1
valign = 1
uppercase = true

[node name="Label3" type="Label" parent="Control/Panel"]
margin_left = 39.0
margin_top = 25.0
margin_right = 174.0
margin_bottom = 65.0
text = "DB SLIDER"
align = 1
valign = 1
uppercase = true

[node name="HSlider" type="HSlider" parent="Control/Panel"]
margin_left = 3.0
margin_top = 52.0
margin_right = 19.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 0 )
min_value = -100.0
value = -20.0
script = ExtResource( 7 )

[node name="Panel2" type="Panel" parent="Control"]
margin_left = 489.0
margin_top = 404.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel2"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Piano_Len" type="LineEdit" parent="Control/Panel2/VBoxContainer"]
margin_right = 300.0
margin_bottom = 24.0
text = "1.0"

[node name="Label" type="Label" parent="Control/Panel2/VBoxContainer/Piano_Len"]
margin_left = 61.0
margin_top = 6.0
margin_right = 192.0
margin_bottom = 20.0
text = "LENGTH MULTIPLIER"

[node name="Oscilator_Scaling" type="LineEdit" parent="Control/Panel2/VBoxContainer"]
margin_top = 28.0
margin_right = 300.0
margin_bottom = 52.0
text = "1.0"
placeholder_text = "1.0"

[node name="Label" type="Label" parent="Control/Panel2/VBoxContainer/Oscilator_Scaling"]
margin_left = 61.0
margin_top = 6.0
margin_right = 192.0
margin_bottom = 20.0
text = "OSCILATOR SCALING"

[node name="Time_Delta" type="LineEdit" parent="Control/Panel2/VBoxContainer"]
margin_top = 56.0
margin_right = 300.0
margin_bottom = 80.0
text = "1.0"

[node name="Label" type="Label" parent="Control/Panel2/VBoxContainer/Time_Delta"]
margin_left = 61.0
margin_top = 6.0
margin_right = 192.0
margin_bottom = 20.0
text = "TIME DELTA"

[node name="Count_Sample_HZ" type="LineEdit" parent="Control/Panel2/VBoxContainer"]
margin_top = 84.0
margin_right = 300.0
margin_bottom = 108.0
text = "22050.0"
placeholder_text = "22050.0"

[node name="Label" type="Label" parent="Control/Panel2/VBoxContainer/Count_Sample_HZ"]
margin_left = 61.0
margin_top = 6.0
margin_right = 192.0
margin_bottom = 20.0
text = "COUNTABLE SAMPLE HZ"

[node name="Label" type="Label" parent="Control/Panel2/VBoxContainer"]
margin_top = 112.0
margin_right = 300.0
margin_bottom = 177.0
rect_min_size = Vector2( 300, 0 )
text = "
  phase -> vec3 /   cnt_sample_hz - vec3 / osc_multi *= time_delta - vec3
+ TAU / sin (vec 3 - len_multi) * vec3 + e"
align = 1
autowrap = true

[node name="Label" type="Label" parent="Control/Panel2"]
margin_left = 300.0
margin_top = 6.0
margin_right = 340.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 160 )
text = "A W/IN_UNISION_OF B
         -
       3 
	        /
      G	
	THE PROBABILITY, OF WHAT IS, AND WHAT ISN'T NOW, THEN AND WHEN.
	IFF WE ALLOW, G -= D * T / 3 + G	
	&&  A --> B AS 3 / D"
autowrap = true

[node name="Button" type="Button" parent="Control/Panel2"]
margin_left = 455.0
margin_top = 6.0
margin_right = 531.0
margin_bottom = 26.0
text = "o RECORD"

[node name="Save" type="Button" parent="Control/Panel2"]
margin_left = 455.0
margin_top = 34.0
margin_right = 526.0
margin_bottom = 54.0
text = "x -> SAVE"

[node name="Panel3" type="Panel" parent="Control"]
margin_left = 896.0
margin_right = 1024.0
margin_bottom = 128.0

[node name="RichTextLabel" type="TextEdit" parent="Control/Panel3"]
margin_right = 128.0
margin_bottom = 128.0
readonly = true
smooth_scrolling = true
wrap_enabled = true

[node name="KinematicBody" type="KinematicBody" parent="."]
transform = Transform( -0.556224, 0.430861, -0.710615, 0.612383, 0.790561, -2.67681e-08, 0.561785, -0.435169, -0.70358, -13.9487, 12.6268, 12.0899 )
script = ExtResource( 1 )
top_speed = 3.0

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
shape = SubResource( 4 )

[node name="pivot" type="Spatial" parent="KinematicBody"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="Camera" type="Camera" parent="KinematicBody/pivot"]
transform = Transform( 1, 2.98023e-08, -4.47035e-08, -4.65661e-08, 1, -1.45286e-07, 7.45058e-08, 2.98023e-08, 1, 0, 0, 0 )
current = true
fov = 41.4
size = 0.001
near = 0.01
far = 8192.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.0288687, -0.147304, 0.98867, 0.813041, 0.578842, 0.0625025, -0.58149, 0.802025, 0.136475, 8, 29.8, 0 )
light_color = Color( 0.909804, 0.847059, 0.427451, 1 )
light_energy = 5.33
light_indirect_energy = 0.0
light_bake_mode = 2
shadow_enabled = true
shadow_contact = 1.0

[node name="Player" type="AudioStreamPlayer" parent="."]
stream = SubResource( 7 )
autoplay = true

[node name="RECORD" type="AudioStreamPlayer" parent="."]
bus = "Record"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="button_up" from="Control/Panel2/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="Control/Panel2/Save" to="." method="_on_Save_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
